lib/flua_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<State Function()>(symbol: 'flua_create')
external State create();

@ffi.Native<ffi.Void Function(State)>(symbol: 'flua_close')
external void close(State state);

@ffi.Native<ffi.Int Function(State, ffi.Pointer<ffi.Char>)>(
  symbol: 'flua_dostring',
)
external int dostring(State state, ffi.Pointer<ffi.Char> code);

@ffi.Native<ffi.Int Function(State, ffi.Pointer<ffi.Char>)>(
  symbol: 'flua_loadstring',
)
external int loadstring(State state, ffi.Pointer<ffi.Char> code);

@ffi.Native<ffi.Void Function(State, ffi.Pointer<ffi.Char>)>(
  symbol: 'flua_setglobal',
)
external void setglobal(State state, ffi.Pointer<ffi.Char> name);

@ffi.Native<ffi.Void Function(State, ffi.Pointer<ffi.Char>, ffi.Int64)>(
  symbol: 'flua_setglobalint',
)
external void setglobalint(State state, ffi.Pointer<ffi.Char> name, int value);

@ffi.Native<ffi.Void Function(State, ffi.Pointer<ffi.Char>, ffi.Double)>(
  symbol: 'flua_setglobaldouble',
)
external void setglobaldouble(
  State state,
  ffi.Pointer<ffi.Char> name,
  double value,
);

@ffi.Native<
  ffi.Void Function(State, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
>(symbol: 'flua_setglobalstring')
external void setglobalstring(
  State state,
  ffi.Pointer<ffi.Char> name,
  ffi.Pointer<ffi.Char> value,
);

@ffi.Native<ffi.Void Function(State, ffi.Pointer<ffi.Char>, ffi.Int)>(
  symbol: 'flua_setglobalbool',
)
external void setglobalbool(State state, ffi.Pointer<ffi.Char> name, int value);

@ffi.Native<ffi.Void Function(State, ffi.Pointer<ffi.Char>)>(
  symbol: 'flua_setglobalnil',
)
external void setglobalnil(State state, ffi.Pointer<ffi.Char> name);

@ffi.Native<ffi.Void Function(State, ffi.Int64)>(symbol: 'flua_pushint')
external void pushint(State state, int value);

@ffi.Native<ffi.Void Function(State, ffi.Double)>(symbol: 'flua_pushdouble')
external void pushdouble(State state, double value);

@ffi.Native<ffi.Void Function(State, ffi.Pointer<ffi.Char>)>(
  symbol: 'flua_pushstring',
)
external void pushstring(State state, ffi.Pointer<ffi.Char> value);

@ffi.Native<ffi.Void Function(State, ffi.Int)>(symbol: 'flua_pushbool')
external void pushbool(State state, int value);

@ffi.Native<ffi.Void Function(State)>(symbol: 'flua_pushnil')
external void pushnil(State state);

@ffi.Native<ffi.Void Function(State, ffi.Int)>(symbol: 'flua_pushvalue')
external void pushvalue(State state, int idx);

@ffi.Native<ffi.Void Function(State, CFunction)>(symbol: 'flua_pushcfunction')
external void pushcfunction(State state, CFunction fn);

@ffi.Native<ffi.Void Function(State)>(symbol: 'flua_newtable')
external void newtable(State state);

@ffi.Native<ffi.Void Function(State, ffi.Int, ffi.Int)>(
  symbol: 'flua_createtable',
)
external void createtable(State state, int narray, int nrec);

@ffi.Native<ffi.Void Function(State, ffi.Int, ffi.Pointer<ffi.Char>)>(
  symbol: 'flua_setfield',
)
external void setfield(State state, int idx, ffi.Pointer<ffi.Char> name);

@ffi.Native<ffi.Void Function(State, ffi.Int)>(symbol: 'flua_settable')
external void settable(State state, int idx);

@ffi.Native<ffi.Void Function(State, ffi.Int)>(symbol: 'flua_rawset')
external void rawset(State state, int idx);

@ffi.Native<ffi.Void Function(State, ffi.Int, ffi.Int64)>(symbol: 'flua_seti')
external void seti(State state, int idx, int n);

@ffi.Native<ffi.Void Function(State, ffi.Int, ffi.Int64)>(
  symbol: 'flua_rawseti',
)
external void rawseti(State state, int idx, int n);

@ffi.Native<ffi.Int Function(State, ffi.Pointer<ffi.Char>)>(
  symbol: 'flua_getglobaltype',
)
external int getglobaltype(State state, ffi.Pointer<ffi.Char> name);

@ffi.Native<ffi.Int Function(State, ffi.Pointer<ffi.Char>)>(
  symbol: 'flua_getglobal',
)
external int getglobal(State state, ffi.Pointer<ffi.Char> name);

@ffi.Native<ffi.Int Function(State, ffi.Int)>(symbol: 'flua_gettable')
external int gettable(State state, int idx);

@ffi.Native<ffi.Int Function(State, ffi.Int)>(symbol: 'flua_rawget')
external int rawget(State state, int idx);

@ffi.Native<ffi.Int Function(State, ffi.Int, ffi.Int64)>(symbol: 'flua_geti')
external int geti(State state, int idx, int n);

@ffi.Native<ffi.Int Function(State, ffi.Int, ffi.Int64)>(symbol: 'flua_rawgeti')
external int rawgeti(State state, int idx, int n);

@ffi.Native<ffi.Int Function(State, ffi.Int)>(symbol: 'flua_pcall')
external int pcall(State state, int arg_count);

@ffi.Native<ffi.Int64 Function(State, ffi.Int)>(symbol: 'flua_tointeger')
external int tointeger(State state, int idx);

@ffi.Native<ffi.Double Function(State, ffi.Int)>(symbol: 'flua_tonumber')
external double tonumber(State state, int idx);

@ffi.Native<ffi.Pointer<ffi.Char> Function(State, ffi.Int)>(
  symbol: 'flua_tostring',
)
external ffi.Pointer<ffi.Char> tostring(State state, int idx);

@ffi.Native<ffi.Int Function(State, ffi.Int)>(symbol: 'flua_toboolean')
external int toboolean(State state, int idx);

@ffi.Native<ffi.Double Function(State, ffi.Int)>(symbol: 'flua_checknumber')
external double checknumber(State state, int arg);

@ffi.Native<ffi.Double Function(State, ffi.Int, ffi.Double)>(
  symbol: 'flua_optnumber',
)
external double optnumber(State state, int arg, double def);

@ffi.Native<ffi.Int64 Function(State, ffi.Int)>(symbol: 'flua_checkinteger')
external int checkinteger(State state, int arg);

@ffi.Native<ffi.Int64 Function(State, ffi.Int, ffi.Int64)>(
  symbol: 'flua_optinteger',
)
external int optinteger(State state, int arg, int def);

@ffi.Native<ffi.Pointer<ffi.Char> Function(State, ffi.Int)>(
  symbol: 'flua_checklstring',
)
external ffi.Pointer<ffi.Char> checklstring(State state, int arg);

@ffi.Native<
  ffi.Pointer<ffi.Char> Function(State, ffi.Int, ffi.Pointer<ffi.Char>)
>(symbol: 'flua_optlstring')
external ffi.Pointer<ffi.Char> optlstring(
  State state,
  int arg,
  ffi.Pointer<ffi.Char> def,
);

@ffi.Native<ffi.Void Function(State, ffi.Int, ffi.Pointer<ffi.Char>)>(
  symbol: 'flua_checkstack',
)
external void checkstack(State state, int sz, ffi.Pointer<ffi.Char> msg);

@ffi.Native<ffi.Void Function(State, ffi.Int, ffi.Int)>(
  symbol: 'flua_checktype',
)
external void checktype(State state, int arg, int t);

@ffi.Native<ffi.Void Function(State, ffi.Int)>(symbol: 'flua_checkany')
external void checkany(State state, int arg);

@ffi.Native<ffi.Int Function(State, ffi.Int)>(symbol: 'flua_isnoneornil')
external int isnoneornil(State state, int arg);

@ffi.Native<ffi.Int Function()>(symbol: 'flua_registryindex')
external int registryindex();

@ffi.Native<ffi.Pointer<ffi.Char> Function(State)>(symbol: 'flua_error')
external ffi.Pointer<ffi.Char> error(State state);

@ffi.Native<ffi.Int Function(State)>(symbol: 'flua_gettop')
external int gettop(State state);

@ffi.Native<ffi.Void Function(State, ffi.Int)>(symbol: 'flua_pop')
external void pop(State state, int n);

@ffi.Native<ffi.Void Function(State, ffi.Int)>(symbol: 'flua_settop')
external void settop(State state, int idx);

@ffi.Native<ffi.Int Function(State, ffi.Int)>(symbol: 'flua_absindex')
external int absindex(State state, int idx);

@ffi.Native<ffi.Int Function(State, ffi.Int)>(symbol: 'flua_type')
external int type(State state, int idx);

@ffi.Native<ffi.Int Function(State, ffi.Int)>(symbol: 'flua_next')
external int next(State state, int idx);

@ffi.Native<ffi.Int Function(State, ffi.Int)>(symbol: 'flua_ref')
external int ref(State state, int idx);

@ffi.Native<ffi.Void Function(State, ffi.Int, ffi.Int)>(symbol: 'flua_unref')
external void unref(State state, int idx, int ref$1);

@ffi.Native<State Function(State)>(symbol: 'flua_newthread')
external State newthread(State state);

@ffi.Native<ffi.Int Function(State, State, ffi.Int)>(symbol: 'flua_resume')
external int resume(State thread, State from, int nargs);

@ffi.Native<ffi.Int Function(State)>(symbol: 'flua_status')
external int status(State state);

@ffi.Native<ffi.Void Function(State, ffi.Int64)>(
  symbol: 'flua_push_async_function',
)
external void push_async_function(State state, int id);

typedef State = ffi.Pointer<ffi.Void>;
typedef CFunctionFunction = ffi.Int Function(State L);
typedef DartCFunctionFunction = int Function(State L);
typedef CFunction = ffi.Pointer<ffi.NativeFunction<CFunctionFunction>>;
